<resources>
    <string name="google_maps_API_key">AIzaSyCFSvIheJtXltFVAfOi5e7CAvUcrjO3LzU</string>>
    <string name="google_places_API_key">AIzaSyCFSvIheJtXltFVAfOi5e7CAvUcrjO3LzU</string>>
    <string name="app_name">RecycleMe</string>
    <string name="sub_title">A Team MARJ Project</string>
    <string name="welcome_text">Welcome to RecycleMe, \nOpen the side menu to explore!!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">415410462197076</string>
    <string name="fb_login_protocol_scheme">fb415410462197076</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="query_recycling_number">The barcode you have scanned does not currently have a recycling number, please help us out by providing this for our records!</string>
    <string name="recycleme_details">This application is used to scan the barcode\'s of items to get recycling information about them. Users can also provide
    their location to get their recycling zone information which is retrieved by the Auckland Council website! Thanks for using our app.</string>
    <string name="nav_home">Home</string>
    <string name="nav_scan">Scan</string>
    <string name="nav_account">Account</string>
    <string name="nav_manage">Manage</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_more">More</string>
    <string name="nav_share">Share</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="scan_history">Scan History</string>
    <string name="tap_to_scan">TAP TO SCAN</string>
    <string name="zone">Zone</string>
    <string name="get_address">Get Address</string>
    <string name="logo">logo</string>
</resources>
