<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/nav_scan"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_account"/>
    </group>

    <item android:title="@string/nav_more">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_notifications"
                    android:icon="@drawable/ic_notifications"
                    android:title="@string/nav_notifications"/>
                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_contact"
                    android:title="@string/nav_contact_us"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/nav_about_us"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_manage">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_log_out"/>
        </menu>
    </item>
</menu>